--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
 ../.idea
 *.sqlite*
+
+# dependencies
+/front/node_modules
+/front/.pnp
+/front.pnp.js
+
+# testing
+/front/coverage
+
+# production
+/front/build
+
+# misc
+/front.DS_Store
+/front.env.local
+/front.env.development.local
+/front.env.test.local
+/front.env.production.local
+
+/frontnpm-debug.log*
+/frontyarn-debug.log*
+/frontyarn-error.log*
